package org.kashcode.todoapp.data.models;

public enum ReminderType {
    EMAIL,
    DESKTOP_NOTIFICATION
}
